--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>TodosTutorial</title>
-  <base href="/">
+  <base href="/todo-app">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/assets/css/todomvc-common.css">
+  <link rel="stylesheet" href="/assets/css/todomvc-app.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
